Spacing fix

--- a/src/css/branding.css
+++ b/src/css/branding.css
@@ -164,16 +164,16 @@ p {
 
 .sidebar a {
     text-decoration: none;
-    height: calc(var(--header-height) - 20px);
+    height: var(--header-height);
     width: 100%;
-    padding: 10px 0;
-    display: inline-block;
+    padding: 0;
+    display: block;
 }
 
 .sidebar a h2 {
     display: none;
     float: left;
-    line-height: calc(var(--header-height) - 20px);
+    line-height: var(--header-height);
     padding: 0;
     margin: 0;
     color: var(--light-grey);
@@ -186,7 +186,7 @@ p {
     height: calc(var(--header-height) - 20px);
     display: inline-block;
     float: left;
-    margin: 0 10px;
+    margin: 10px;
     transition: 0.3s;
     background-image: url('../branding/menu_grey.svg');
     background-size: contain;
@@ -269,6 +269,7 @@ p {
     .dropdown_content a {
         width: 100%;
         font-size: 26px;
+        margin: 0;
     }
 
     .dropdown:hover {
@@ -302,7 +303,7 @@ p {
     }
 
     .sidebar a h2 {
-        display: inline-block;
+        display: block;
         text-align: center;
         width: 100%;
     }
